# DragosEngine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
assets/: README.md
ci/: pipeline.yml
ci/scripts/: build_windows.ps1
docs/: architecture.md  getting_started.md  roadmap.md
editor/src/: EditorApp.cpp  QtMainWindow.cpp  QtMainWindow.h
editor/ui/: mainwindow.ui
engine/: CMakeLists.txt
engine/include/: ECS.h  ResourceManager.h  engine.h
engine/src/: ResourceManager.cpp  engine.cpp  main.cpp
examples/: CMakeLists.txt
examples/2D_demo/: CMakeLists.txt  main.cpp  project.json
examples/3D_demo/: CMakeLists.txt  main.cpp  project.json
runtime/: CMakeLists.txt
runtime/native_bindings/: CSharpBridge.cpp  CSharpBridge.h
runtime/scripts/: ExampleBehaviour.cs
tests/integration/: test_script_binding.cpp
tests/unit/: test_resource_manager.cpp
tools/asset_pipeline/: CMakeLists.txt  importer.cpp
tools/packer/: CMakeLists.txt  packer.cpp
